2004-06-18  Luke Gorrie  <luke@bluetail.com>

	* slime.el (slime-repl-return): If the user presses return on old
	REPL input then take it and insert it as the current input.
	Signal an error if the point is not on any input.
	(slime-preserve-zmacs-region): Function to ensure that the current
	command doesn't deactivate zmacs-region (XEmacs only).
	(slime-repl-bol, slime-repl-eol): Use it.
	(slime-kill-all-buffers): Changed buffer-name regexps for XEmacs
	compatibility. The ",quit" shortcut now works in XEmacs.
	(slime-display-message): Fixed call to `slime-typeout-message'
	to handle formatting characters. Avoids errors on certain messages.
	(slime-list-compiler-notes): Save the window configuration
	earlier. This fixes an error under XEmacs when dismissing the
	notes buffer.

2004-06-17  Luke Gorrie  <luke@bluetail.com>

	* swank-loader.lisp (binary-pathname): Place fasl files under
	~/.slime/fasl/ instead of the SLIME installation directory. The
	installation directory can now be read-only.
	(binary-pathname, user-init-file): Removed Win32
	conditionalization. The init file is now called ~/.swank.lisp
	instead of ~/_swank.lsp.

	* swank-lispworks.lisp (with-fairly-standard-io-syntax): New
	macro. Like with-standard-io-syntax, but keeps the existing values
	of *package* and *readtable*.
	(dspec-stream-position): Use it.
	(quit-lisp): Implemented.

2004-06-16  Helmut Eller  <e9626484@stud3.tuwien.ac.at>

	* slime.el (slime-set-default-directory): Don't call
	slime-repl-update-banner in Emacs 20.
	(slime-show-source-location, slime-recenter-window): Use
	set-window-start instead of recenter; this avoids flickering.
	(sldb-list-locals): Don't forget about slime-current-thread in the
	temporary buffer.  (Fixes bug reported by Mike Beedle.)
	(sldb-step): Re-enabled.  The CMUCL backend has rudimentary support
	for stepping.

	* swank.lisp (*readtable-alist*): Call backend function for
	initialization.
	(eval-for-emacs, guess-buffer-package): Signal a continuable error